--- a/.github/workflows/pull-event.yml
+++ b/.github/workflows/pull-event.yml
@@ -5,4 +5,4 @@ jobs:
     steps:
       - uses: adamculp/geekyaction@master
       - name: match-twitter
-        run: echo Hello, World!
+        run: echo Hello, new World!
